--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit
-streamlit-webrtc
+streamlit-webrtc       # 실시간 웹캠 컴포넌트
 opencv-python-headless
-tensorflow-cpu==2.12.0   # 또는 Cloud에서 설치 가능한 버전
 mtcnn
+tensorflow-cpu==2.12.0
 pillow
 pandas
