--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit
-streamlit-webrtc       # 실시간 웹캠 컴포넌트
+streamlit-webrtc
 opencv-python-headless
 mtcnn
-tensorflow==2.13.0
+tensorflow-cpu==2.12.0
 pillow
 pandas
