--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,135 @@
-streamlit
-streamlit-webrtc
-opencv-python-headless
-mtcnn
-tensorflow-cpu==2.12.0
-pillow
-pandas
+absl-py==2.3.1
+aioice==0.10.1
+aiortc==1.13.0
+altair==5.5.0
+astunparse==1.6.3
+attrs==25.3.0
+av==14.4.0
+bleach @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_bleach_1737382993/work
+blinker==1.9.0
+Brotli @ file:///D:/bld/brotli-split_1749229870877/work
+cachetools==5.5.2
+certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1752493286596/work/certifi
+cffi @ file:///D:/bld/cffi_1725560792189/work
+charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1746214863626/work
+click==8.1.8
+colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1733218098505/work
+contourpy==1.3.0
+cryptography==45.0.5
+cycler==0.12.1
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1740384970518/work
+dnspython==2.7.0
+facenet-pytorch==2.5.3
+fer==22.5.1
+ffmpeg==1.4
+filelock==3.18.0
+flatbuffers==25.2.10
+fonttools==4.59.0
+fsspec==2025.7.0
+gast==0.4.0
+gitdb==4.0.12
+GitPython==3.1.45
+google-auth==2.40.3
+google-auth-oauthlib==1.0.0
+google-crc32c==1.7.1
+google-pasta==0.2.0
+grpcio==1.74.0
+h2 @ file:///home/conda/feedstock_root/build_artifacts/h2_1738578511449/work
+h5py==3.14.0
+hpack @ file:///home/conda/feedstock_root/build_artifacts/hpack_1737618293087/work
+hyperframe @ file:///home/conda/feedstock_root/build_artifacts/hyperframe_1737618333194/work
+idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1733211830134/work
+ifaddr==0.2.0
+imageio @ file:///home/conda/feedstock_root/build_artifacts/imageio_1738273805233/work
+imageio-ffmpeg @ file:///home/conda/feedstock_root/build_artifacts/imageio-ffmpeg_1737102630951/work
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
+jax==0.4.30
+jaxlib==0.4.30
+Jinja2==3.1.6
+joblib==1.5.1
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+kaggle @ file:///home/conda/feedstock_root/build_artifacts/kaggle_1736732284024/work
+keras==2.13.1
+kiwisolver==1.4.7
+libclang==18.1.1
+Markdown==3.8.2
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.9.4
+mdurl==0.1.2
+mediapipe==0.10.14
+ml_dtypes==0.5.1
+moviepy @ file:///home/conda/feedstock_root/build_artifacts/moviepy_1665160419595/work
+mpmath==1.3.0
+mtcnn==0.1.1
+namex==0.1.0
+narwhals==1.48.1
+networkx==3.2.1
+numpy==1.24.3
+oauthlib==3.3.1
+opencv-contrib-python==4.11.0.86
+opencv-python==4.12.0.88
+opt_einsum==3.4.0
+optree==0.17.0
+packaging==25.0
+pandas==2.3.1
+pillow @ file:///D:/bld/pillow_1751481993665/work
+proglog @ file:///home/conda/feedstock_root/build_artifacts/proglog_1728452852274/work
+protobuf==4.25.8
+pyarrow==21.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_pycparser_1733195786/work
+pydeck==0.9.1
+pyee==13.0.0
+Pygments==2.19.2
+pylibsrtp==0.12.0
+pyOpenSSL==25.1.0
+pyparsing==3.2.3
+PySocks @ file:///D:/bld/pysocks_1733217287171/work
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_python-dateutil_1751104122/work
+python-dotenv==1.1.1
+python-slugify @ file:///home/conda/feedstock_root/build_artifacts/python-slugify_1733756245724/work
+pytz==2025.2
+referencing==0.36.2
+requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1749498106507/work
+requests-oauthlib==2.0.0
+rich==14.1.0
+rpds-py==0.26.0
+rsa==4.9.1
+scikit-learn==1.6.1
+scipy==1.13.1
+sentencepiece==0.2.0
+six @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_six_1753199211/work
+smmap==5.0.2
+sounddevice==0.5.2
+streamlit==1.47.1
+streamlit-webrtc==0.63.3
+sympy==1.14.0
+tenacity==9.1.2
+tensorboard==2.13.0
+tensorboard-data-server==0.7.2
+tensorflow==2.13.0
+tensorflow-estimator==2.13.0
+tensorflow-intel==2.13.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==3.1.0
+text-unidecode @ file:///home/conda/feedstock_root/build_artifacts/text-unidecode_1733749896243/work
+threadpoolctl==3.6.0
+toml==0.10.2
+torch==2.7.1
+torchvision==0.22.1
+tornado==6.5.1
+tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1735661334605/work
+typing_extensions==4.5.0
+tzdata==2025.2
+urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1750271362675/work
+watchdog==6.0.0
+webencodings @ file:///home/conda/feedstock_root/build_artifacts/webencodings_1733236011802/work
+Werkzeug==3.1.3
+win_inet_pton @ file:///D:/bld/win_inet_pton_1733130564612/work
+wrapt==1.17.2
+zipp==3.23.0
+zstandard==0.23.0
