--- a/requirements.txt
+++ b/requirements.txt
@@ -1,135 +1,224 @@
-absl-py==2.3.1
-aioice==0.10.1
-aiortc==1.13.0
-altair==5.5.0
-astunparse==1.6.3
-attrs==25.3.0
-av==14.4.0
-bleach @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_bleach_1737382993/work
-blinker==1.9.0
-Brotli @ file:///D:/bld/brotli-split_1749229870877/work
-cachetools==5.5.2
-certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1752493286596/work/certifi
-cffi @ file:///D:/bld/cffi_1725560792189/work
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1746214863626/work
-click==8.1.8
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1733218098505/work
-contourpy==1.3.0
-cryptography==45.0.5
-cycler==0.12.1
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1740384970518/work
-dnspython==2.7.0
-facenet-pytorch==2.5.3
-fer==22.5.1
-ffmpeg==1.4
-filelock==3.18.0
-flatbuffers==25.2.10
-fonttools==4.59.0
-fsspec==2025.7.0
-gast==0.4.0
-gitdb==4.0.12
-GitPython==3.1.45
-google-auth==2.40.3
-google-auth-oauthlib==1.0.0
-google-crc32c==1.7.1
-google-pasta==0.2.0
-grpcio==1.74.0
-h2 @ file:///home/conda/feedstock_root/build_artifacts/h2_1738578511449/work
-h5py==3.14.0
-hpack @ file:///home/conda/feedstock_root/build_artifacts/hpack_1737618293087/work
-hyperframe @ file:///home/conda/feedstock_root/build_artifacts/hyperframe_1737618333194/work
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1733211830134/work
-ifaddr==0.2.0
-imageio @ file:///home/conda/feedstock_root/build_artifacts/imageio_1738273805233/work
-imageio-ffmpeg @ file:///home/conda/feedstock_root/build_artifacts/imageio-ffmpeg_1737102630951/work
-importlib_metadata==8.7.0
-importlib_resources==6.5.2
-jax==0.4.30
-jaxlib==0.4.30
-Jinja2==3.1.6
-joblib==1.5.1
-jsonschema==4.25.0
-jsonschema-specifications==2025.4.1
-kaggle @ file:///home/conda/feedstock_root/build_artifacts/kaggle_1736732284024/work
-keras==2.13.1
-kiwisolver==1.4.7
-libclang==18.1.1
-Markdown==3.8.2
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.9.4
-mdurl==0.1.2
-mediapipe==0.10.14
-ml_dtypes==0.5.1
-moviepy @ file:///home/conda/feedstock_root/build_artifacts/moviepy_1665160419595/work
-mpmath==1.3.0
-mtcnn==0.1.1
-namex==0.1.0
-narwhals==1.48.1
-networkx==3.2.1
-numpy==1.24.3
-oauthlib==3.3.1
-opencv-contrib-python==4.11.0.86
-opencv-python==4.12.0.88
-opt_einsum==3.4.0
-optree==0.17.0
-packaging==25.0
-pandas==2.3.1
-pillow @ file:///D:/bld/pillow_1751481993665/work
-proglog @ file:///home/conda/feedstock_root/build_artifacts/proglog_1728452852274/work
-protobuf==4.25.8
-pyarrow==21.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_pycparser_1733195786/work
-pydeck==0.9.1
-pyee==13.0.0
-Pygments==2.19.2
-pylibsrtp==0.12.0
-pyOpenSSL==25.1.0
-pyparsing==3.2.3
-PySocks @ file:///D:/bld/pysocks_1733217287171/work
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_python-dateutil_1751104122/work
-python-dotenv==1.1.1
-python-slugify @ file:///home/conda/feedstock_root/build_artifacts/python-slugify_1733756245724/work
-pytz==2025.2
-referencing==0.36.2
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1749498106507/work
-requests-oauthlib==2.0.0
-rich==14.1.0
-rpds-py==0.26.0
-rsa==4.9.1
-scikit-learn==1.6.1
-scipy==1.13.1
-sentencepiece==0.2.0
-six @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_six_1753199211/work
-smmap==5.0.2
-sounddevice==0.5.2
-streamlit==1.47.1
-streamlit-webrtc==0.63.3
-sympy==1.14.0
-tenacity==9.1.2
-tensorboard==2.13.0
-tensorboard-data-server==0.7.2
-tensorflow==2.13.0
-tensorflow-estimator==2.13.0
-tensorflow-intel==2.13.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==3.1.0
-text-unidecode @ file:///home/conda/feedstock_root/build_artifacts/text-unidecode_1733749896243/work
-threadpoolctl==3.6.0
-toml==0.10.2
-torch==2.7.1
-torchvision==0.22.1
-tornado==6.5.1
-tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1735661334605/work
-typing_extensions==4.5.0
-tzdata==2025.2
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1750271362675/work
-watchdog==6.0.0
-webencodings @ file:///home/conda/feedstock_root/build_artifacts/webencodings_1733236011802/work
-Werkzeug==3.1.3
-win_inet_pton @ file:///D:/bld/win_inet_pton_1733130564612/work
-wrapt==1.17.2
-zipp==3.23.0
-zstandard==0.23.0
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: win-64
+# created-by: conda 24.9.2
+_openmp_mutex=4.5=2_gnu
+absl-py=2.3.1=pypi_0
+aioice=0.10.1=pypi_0
+aiortc=1.13.0=pypi_0
+altair=5.5.0=pypi_0
+aom=3.9.1=he0c23c2_0
+astunparse=1.6.3=pypi_0
+attrs=25.3.0=pypi_0
+av=14.4.0=pypi_0
+bleach=6.2.0=pyh29332c3_4
+blinker=1.9.0=pypi_0
+brotli-python=1.1.0=py39ha51f57c_3
+bzip2=1.0.8=h2bbff1b_6
+ca-certificates=2025.7.14=h4c7d964_0
+cachetools=5.5.2=pypi_0
+cairo=1.18.4=h5782bbf_0
+certifi=2025.7.14=pyhd8ed1ab_0
+cffi=1.17.1=py39ha55e580_0
+charset-normalizer=3.4.2=pyhd8ed1ab_0
+click=8.1.8=pypi_0
+colorama=0.4.6=pyhd8ed1ab_1
+contourpy=1.3.0=pypi_0
+cryptography=45.0.5=pypi_0
+cycler=0.12.1=pypi_0
+dav1d=1.2.1=hcfcfb64_0
+decorator=5.2.1=pyhd8ed1ab_0
+dnspython=2.7.0=pypi_0
+expat=2.7.1=h8ddb27b_0
+facenet-pytorch=2.5.3=pypi_0
+fer=22.5.1=pypi_0
+ffmpeg=1.4=pypi_0
+filelock=3.18.0=pypi_0
+flatbuffers=25.2.10=pypi_0
+font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+font-ttf-inconsolata=3.000=h77eed37_0
+font-ttf-source-code-pro=2.038=h77eed37_0
+font-ttf-ubuntu=0.83=h77eed37_3
+fontconfig=2.15.0=h765892d_1
+fonts-conda-ecosystem=1=0
+fonts-conda-forge=1=0
+fonttools=4.59.0=pypi_0
+freetype=2.13.3=h57928b3_1
+fribidi=1.0.10=h8d14728_0
+fsspec=2025.7.0=pypi_0
+gast=0.4.0=pypi_0
+gdk-pixbuf=2.42.12=hab781ea_1
+gitdb=4.0.12=pypi_0
+gitpython=3.1.45=pypi_0
+google-auth=2.40.3=pypi_0
+google-auth-oauthlib=1.0.0=pypi_0
+google-crc32c=1.7.1=pypi_0
+google-pasta=0.2.0=pypi_0
+graphite2=1.3.14=he0c23c2_0
+grpcio=1.74.0=pypi_0
+h2=4.2.0=pyhd8ed1ab_0
+h5py=3.14.0=pypi_0
+harfbuzz=11.3.2=h8796e6f_0
+hpack=4.1.0=pyhd8ed1ab_0
+hyperframe=6.1.0=pyhd8ed1ab_0
+icu=75.1=he0c23c2_0
+idna=3.10=pyhd8ed1ab_1
+ifaddr=0.2.0=pypi_0
+imageio=2.37.0=pyhfb79c49_0
+imageio-ffmpeg=0.6.0=pyhd8ed1ab_0
+importlib-metadata=8.7.0=pypi_0
+importlib-resources=6.5.2=pypi_0
+intel-openmp=2024.2.1=h57928b3_1083
+jax=0.4.30=pypi_0
+jaxlib=0.4.30=pypi_0
+jinja2=3.1.6=pypi_0
+joblib=1.5.1=pypi_0
+jsonschema=4.25.0=pypi_0
+jsonschema-specifications=2025.4.1=pypi_0
+kaggle=1.7.4.5=pypi_0
+keras=2.13.1=pypi_0
+kiwisolver=1.4.7=pypi_0
+lame=3.100=hcfcfb64_1003
+lcms2=2.17=hbcf6048_0
+lerc=4.0.0=h6470a55_1
+libblas=3.9.0=32_h641d27c_mkl
+libcblas=3.9.0=32_h5e41251_mkl
+libclang=18.1.1=pypi_0
+libdeflate=1.24=h76ddb4d_0
+libexpat=2.7.1=hac47afa_0
+libffi=3.4.6=h537db12_1
+libfreetype=2.13.3=h57928b3_1
+libfreetype6=2.13.3=h0b5ce68_1
+libgcc=15.1.0=h1383e82_3
+libglib=2.84.2=hbc94333_0
+libgomp=15.1.0=h1383e82_3
+libhwloc=2.11.2=default_h88281d1_1002
+libiconv=1.18=h135ad9c_1
+libintl=0.22.5=h5728263_3
+libjpeg-turbo=3.1.0=h2466b09_0
+liblapack=3.9.0=32_h1aa476e_mkl
+liblzma=5.8.1=h2466b09_2
+liblzma-devel=5.8.1=h2466b09_2
+libogg=1.3.5=h2466b09_1
+libopus=1.5.2=h2466b09_0
+libpng=1.6.50=h95bef1e_0
+librsvg=2.58.4=h5ce5fed_3
+libsqlite=3.50.3=hf5d6505_1
+libtiff=4.7.0=h05922d8_5
+libusb=1.0.29=h1839187_0
+libvorbis=1.3.7=h0e60522_0
+libwebp-base=1.6.0=h4d5522a_0
+libwinpthread=12.0.0.r4.gg4f2fc60ca=h57928b3_9
+libxcb=1.17.0=h0e4246c_0
+libxml2=2.13.8=h442d1da_0
+libzlib=1.3.1=h2466b09_2
+markdown=3.8.2=pypi_0
+markdown-it-py=3.0.0=pypi_0
+markupsafe=3.0.2=pypi_0
+matplotlib=3.9.4=pypi_0
+mdurl=0.1.2=pypi_0
+mediapipe=0.10.14=pypi_0
+mkl=2024.2.2=h66d3029_15
+ml-dtypes=0.5.1=pypi_0
+moviepy=1.0.3=pyhd8ed1ab_1
+mpmath=1.3.0=pypi_0
+mtcnn=0.1.1=pypi_0
+namex=0.1.0=pypi_0
+narwhals=1.48.1=pypi_0
+networkx=3.2.1=pypi_0
+numpy=1.24.3=pypi_0
+oauthlib=3.3.1=pypi_0
+opencv-contrib-python=4.11.0.86=pypi_0
+opencv-python=4.12.0.88=pypi_0
+openh264=2.6.0=hb17fa0b_0
+openjpeg=2.5.3=h4d64b90_0
+openssl=3.5.1=h725018a_0
+opt-einsum=3.4.0=pypi_0
+optree=0.17.0=pypi_0
+packaging=25.0=pypi_0
+pandas=2.3.1=pypi_0
+pango=1.56.4=h03d888a_0
+pcre2=10.45=h99c9b8b_0
+pillow=11.3.0=py39hbad85af_0
+pip=25.1.1=pypi_0
+pixman=0.46.4=hc614b68_0
+proglog=0.1.12=pypi_0
+protobuf=4.25.8=pypi_0
+pthread-stubs=0.4=h0e40799_1002
+pyarrow=21.0.0=pypi_0
+pyasn1=0.6.1=pypi_0
+pyasn1-modules=0.4.2=pypi_0
+pycparser=2.22=pyh29332c3_1
+pydeck=0.9.1=pypi_0
+pyee=13.0.0=pypi_0
+pygments=2.19.2=pypi_0
+pylibsrtp=0.12.0=pypi_0
+pyopenssl=25.1.0=pypi_0
+pyparsing=3.2.3=pypi_0
+pysocks=1.7.1=pyh09c184e_7
+python=3.9.23=h8c5b53a_0_cpython
+python-dateutil=2.9.0.post0=pyhe01879c_2
+python-dotenv=1.1.1=pypi_0
+python-slugify=8.0.4=pyhd8ed1ab_1
+python_abi=3.9=8_cp39
+pytz=2025.2=pypi_0
+referencing=0.36.2=pypi_0
+requests=2.32.4=pyhd8ed1ab_0
+requests-oauthlib=2.0.0=pypi_0
+rich=14.1.0=pypi_0
+rpds-py=0.26.0=pypi_0
+rsa=4.9.1=pypi_0
+scikit-learn=1.6.1=pypi_0
+scipy=1.13.1=pypi_0
+sdl2=2.32.54=he0c23c2_0
+sdl3=3.2.18=h5112557_0
+sentencepiece=0.2.0=pypi_0
+setuptools=78.1.1=py39haa95532_0
+six=1.17.0=pyhe01879c_1
+smmap=5.0.2=pypi_0
+sounddevice=0.5.2=pypi_0
+sqlite=3.50.2=hda9a48d_1
+streamlit=1.47.1=pypi_0
+streamlit-webrtc=0.63.3=pypi_0
+svt-av1=3.0.2=he0c23c2_0
+sympy=1.14.0=pypi_0
+tbb=2021.13.0=h62715c5_1
+tenacity=9.1.2=pypi_0
+tensorboard=2.13.0=pypi_0
+tensorboard-data-server=0.7.2=pypi_0
+tensorflow=2.13.0=pypi_0
+tensorflow-estimator=2.13.0=pypi_0
+tensorflow-intel=2.13.0=pypi_0
+tensorflow-io-gcs-filesystem=0.31.0=pypi_0
+termcolor=3.1.0=pypi_0
+text-unidecode=1.3=pyhd8ed1ab_2
+threadpoolctl=3.6.0=pypi_0
+tk=8.6.13=h2c6b04d_2
+toml=0.10.2=pypi_0
+torch=2.7.1=pypi_0
+torchvision=0.22.1=pypi_0
+tornado=6.5.1=pypi_0
+tqdm=4.67.1=pyhd8ed1ab_1
+typing-extensions=4.5.0=pypi_0
+tzdata=2025.2=pypi_0
+ucrt=10.0.22621.0=haa95532_0
+urllib3=2.5.0=pyhd8ed1ab_0
+vc=14.3=h2df5915_10
+vc14_runtime=14.44.35208=h4927774_10
+vs2015_runtime=14.44.35208=ha6b5a95_10
+watchdog=6.0.0=pypi_0
+webencodings=0.5.1=pyhd8ed1ab_3
+werkzeug=3.1.3=pypi_0
+wheel=0.45.1=py39haa95532_0
+win_inet_pton=1.1.0=pyh7428d3b_8
+wrapt=1.17.2=pypi_0
+x264=1!164.3095=h8ffe710_2
+x265=3.5=h2d74725_3
+xorg-libxau=1.0.12=h0e40799_0
+xorg-libxdmcp=1.1.5=h0e40799_0
+xz=5.8.1=h208afaa_2
+xz-tools=5.8.1=h2466b09_2
+zipp=3.23.0=pypi_0
+zlib=1.3.1=h2466b09_2
+zstandard=0.23.0=py39ha55e580_2
+zstd=1.5.7=hbeecb71_2
