--- a/requirements.txt
+++ b/requirements.txt
@@ -119,7 +119,7 @@ tensorboard==2.13.0
 tensorboard-data-server==0.7.2
 tensorflow==2.13.0
 tensorflow-estimator==2.13.0
-tensorflow-intel==2.13.0
+tensorflow-cpu==2.13.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==3.1.0
 text-unidecode==1.3
